# Tema-OOP5

Lab5/: CMakeLists.txt
